<resources>

    <string name="app_name">Daily Dairy</string>
    <string name="may_contain_ads">This Action May Contain Ads</string>
    <string name="save_memories_in_your_pocket">Save memories in your pocket</string>
    <string name="let_s_start">Let’s Start</string>
    <string name="we_are_getting_started">We are getting started....</string>
    <string name="apply">Apply</string>
    <string name="change_background">Change Background</string>
    <string name="texture">Texture</string>
    <string name="gradient">Gradient</string>
    <string name="create_6_digit_pin">Create 6-Digit PIN</string>
    <string name="create_password">Create Password</string>
    <string name="use_fingerprint">Use Fingerprint</string>
    <string name="if_the_device_supports_this_function">(If the device supports this function)</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="delete_notes">Delete Notes?</string>
    <string name="this_action_can_t_be_undone">This action can\'t be undone</string>
    <string name="are_you_sure_you_want_to_delete_this_folder">Are you sure you want to delete this folder?</string>
    <string name="no_keep_it">No, Keep it</string>
    <string name="yes_delete">Yes, Delete</string>
    <string name="delete_folder">Delete Folder?</string>
    <string name="attention">Attention!</string>
    <string name="your_note_is_not_saved_yet_do_you_want">Your note is not saved yet. Do you want</string>
    <string name="to_save_draft">to save draft?</string>
    <string name="delete">Delete</string>
    <string name="save_draft">Save Draft</string>
    <string name="edit_text">Edit Text</string>
    <string name="exit_app">Exit App</string>
    <string name="do_you_really_want_to_exit_the_app">Do you really want to exit the App?</string>
    <string name="not_now">Not Now</string>
    <string name="yes_exit">Yes, Exit</string>
    <string name="folder_name">Folder name</string>
    <string name="calendar">Calendar</string>
    <string name="no_diary_on_this_day">No Diary on this day</string>
    <string name="save">Save</string>
    <string name="write_your_dairy">Write your diary</string>
    <string name="tittle_here">Tittle Here</string>
    <string name="created_on">Created on</string>
    <string name="may_01">May 01</string>
    <string name="write_something_here">Write something here</string>
    <string name="photos">Photos</string>
    <string name="stikers">Stikers</string>
    <string name="background">Background</string>
    <string name="gliter">Gliter</string>
    <string name="daily_diary">Daily Diary</string>
    <string name="your_saved_notes">Your saved notes</string>
    <string name="folders">Folders</string>
    <string name="drafts">Drafts</string>
    <string name="nothing_in_draft">Nothing in Draft</string>
    <string name="clear_all">Clear All</string>
    <string name="diary_locked">Diary Locked</string>
    <string name="password_locked">Password Locked</string>
    <string name="enter_password_to_unlock_your_diary">Enter Password to unlock your diary</string>
    <string name="enter_password_here">Enter Password Here</string>
    <string name="show_password">Show Password</string>
    <string name="unlock">Unlock</string>
    <string name="touch_the_fingerprint_sensor_to_unlock">Touch the fingerprint sensor to Unlock</string>
    <string name="pin_locked">PIN Locked</string>
    <string name="enter_pin_to_unlock_your_dairy">Enter PIN to unlock your dairy</string>
    <string name="forget_pin_password">Forget PIN/Password</string>
    <string name="no_folders_here">No Folders Here</string>
    <string name="app_language">App Language</string>
    <string name="set_diary_lock">Set Diary Lock</string>
    <string name="this_password_will_be_used_to_unlock_when_you_return_to_the">This password will be used to unlock when you return to the</string>
    <string name="app_make_sure_you_remember_it">App. Make sure you remember it</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm">Confirm</string>
    <string name="touch_the_fingerprint_sensor_to_enroll">Touch the fingerprint sensor to enroll</string>
    <string name="this_code_will_use_to_unlock_this_app">This code will use to unlock this app</string>
    <string name="whenever_you_open_it_please_remember_it">whenever you open it. Please remember it.</string>
    <string name="try_different_method">Try Different Method</string>
    <string name="no_saved_file_here">No Saved File Here</string>
    <string name="saved">Saved</string>
    <string name="settings">Settings</string>
    <string name="clear_app_data">Clear App Data</string>
    <string name="skip_mood_selection">Skip Mood Selection</string>
    <string name="menu">Menu</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="next">Next</string>
    <string name="add_photo">Add Photo</string>
    <string name="recent_images">Recent images</string>
    <string name="album_name">Album Name</string>
    <string name="pin_created_successfully">PIN Created Successfully !</string>
    <string name="use_this_pin_to_login_next_time">Use this PIN to login next time</string>
    <string name="okay">Okay</string>
    <string name="how_are_you_feeling">How are you feeling?</string>
    <string name="good">Good</string>
    <string name="happy">Happy</string>
    <string name="confused">Confused</string>
    <string name="sad">Sad</string>
    <string name="crying">Crying</string>
    <string name="create_folder">Create Folder</string>
    <string name="enter_folder_name">Enter Folder Name</string>
    <string name="create">Create</string>
    <string name="_24">24</string>
    <string name="march">March</string>
    <string name="discrition_text">Discrition Text</string>
    <string name="rate_your_experience_with_us">Rate your experience with us!</string>
    <string name="would_you_mind_giving_us_a_rating_in_the">Would you mind giving us a rating in the</string>
    <string name="app_store_if_you_enjoyed_using_our_app">App Store if you enjoyed using our app?</string>
    <string name="rate_app">Rate App</string>
    <string name="add_stickers">Add Stickers</string>
    <string name="tags">Tags</string>
    <string name="emojis">Emojis</string>
    <string name="move_file">Move File</string>
    <string name="move">Move</string>
    <string name="write_an_answer">Write an answer</string>
    <string name="write_an_answer_for_the_security_question">write an answer for the security question</string>
    <string name="you_have_sellected">you have sellected</string>
    <string name="question">Question</string>
    <string name="what_is_your_favourite_book">What is your favourite book?</string>
    <string name="type_here">Type here...</string>
    <string name="set_security_questions">Set Security Questions</string>
    <string name="this_security_question_will_be_used_to_recover">This Security question will be used to recover</string>
    <string name="your_passwrod_in_case_you_forget_it">your passwrod in case you forget it</string>
    <string name="what_is_your_favorite_book">What is your favorite book?</string>
    <string name="where_did_you_grew_up">Where did you grew up?</string>
    <string name="what_is_your_mother_s_name">What is your mother\'s name?</string>
    <string name="what_was_the_name_of_your_pet">What was the name of your pet?</string>
    <string name="what_is_your_favorite_food">What is your favorite food?</string>
    <string name="what_city_were_you_born_in">What city were you born in?</string>
    <string name="where_did_you_go_for_vication">Where did you go for vication?</string>
    <string name="where_did_you_meet_your_spouse">Where did you meet your spouse?</string>
    <string name="incorrect_answer">Incorrect Answer</string>
    <string name="reset_pin_code">Reset PIN code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>