<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:layout_margin="10dp"
    android:background="@drawable/lock_bg">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/delete_folder"
        android:textSize="12pt"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/quicksand_semibold"
        android:textSize="7pt"
        android:textColor="#FFFFFF"
        android:text="@string/this_action_can_t_be_undone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="7pt"
        android:fontFamily="@font/quicksand_semibold"
        android:text="@string/are_you_sure_you_want_to_delete_this_folder"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <TextView
            android:id="@+id/keepit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/cancel_button"
            android:elevation="6dp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/no_keep_it"
            android:textSize="6pt" />

        <TextView
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/save_button"
            android:elevation="6dp"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/yes_delete"
            android:textColor="@color/main_color"
            android:textSize="6pt" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
