<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:layout_margin="10dp"
    android:background="@drawable/menu_layout">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attention"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="#6F4939"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/quicksand_semibold"
        android:text="@string/your_note_is_not_saved_yet_do_you_want"
        android:textColor="#000000"
        android:textSize="7pt"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_semibold"
        android:gravity="center"
        android:text="@string/to_save_draft"
        android:textColor="#000000"
        android:textSize="7pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18">

        <TextView
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/quicksand_bold"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_cancel"
            android:elevation="6dp"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="#575757"
            android:text="@string/delete"
            android:textSize="6pt" />

        <TextView
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_bold"
            android:background="@drawable/create_button"
            android:elevation="6dp"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/save_draft"
            android:textColor="@color/white"
            android:textSize="6pt" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>