<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@drawable/lock_bg">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:text="@string/exit_app"
        android:textColor="#FFFFFF"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/quicksand_semibold"
        android:textSize="7pt"
        android:text="@string/do_you_really_want_to_exit_the_app"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14">

        <TextView
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/circle_transparent"
            android:gravity="center"
            android:paddingTop="15dp"
            android:textColor="#FFFFFF"
            android:paddingBottom="15dp"
            android:text="@string/not_now"
            android:textSize="7pt" />

        <TextView
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/white_gradient"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/yes_exit"
            android:textColor="@color/main_color"
            android:textSize="7pt" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
