<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottomfragment_bg"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <View
        android:id="@+id/backview"
        android:layout_width="30dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="#D1D1D1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/how_are_you_feeling"
        android:textColor="#FFFFFF"
        android:textSize="9pt"
        android:fontFamily="@font/quicksand_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backview" />

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16">
        <LinearLayout
            android:id="@+id/imagge1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/emojigood" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="8pt"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/imagge2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/emojihappy" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/happy"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="8pt"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/imagge3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/emojiconfused" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confused"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="8pt"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/imagge4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/emojisad" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sad"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="8pt"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/imagge5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/emojicrying" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crying"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="8pt"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/okay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_gradient"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/okay"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="8pt"
        android:textColor="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/circle_transparent"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/okay" />
</androidx.constraintlayout.widget.ConstraintLayout>
