<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/lock_bg"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/pin_created_successfully"
        android:textSize="9pt"
        android:fontFamily="@font/quicksand_bold"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/tick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/use_this_pin_to_login_next_time"
        android:textSize="6pt"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/cancel_button"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:textSize="8pt" />

        <TextView
            android:id="@+id/okay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/white_gradient"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp"
            android:text="@string/okay"
            android:textColor="@color/main_color"
            android:textSize="8pt" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>